# ohte

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: teht3.md  teht4.md
src/: dir.py  formatprogram.py  gamemgmt.py  gen.py  get_local_dir.py  index.py  menus.py  objects.py  scoreboardmgmt.py  scoremgmt.py  setup.py  somegen.py  ui.py  user.py  usermgmt.py  users.json
src/misc/: dir.py  objects.py  setup.py  somegen.py
src/services/: gamemgmt.py  scoremgmt.py  usermgmt.py
src/tests/: gamemgmt_test.py  index_test.py  scoremgmt_test.py  setup_test.py  usermgmt_test.py
src/ui/: mainmenu.py  scoreboardmenu.py  ui.py
