[tool.poetry]
name = "highscore!"
version = "0.1.0"
description = "Pistetaulukkosovellus"
authors = ["CrackPapaXtreme <stathanael@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
